# BOT-AURA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/aura_bot/: __main__.py  bot.py  config.py  database.py
