[project]
name = "bot-aura"
version = "0.1.0"
description = "Discord AURA bot that ranks users and tracks top reacted messages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "discord.py>=2.6.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
bot-aura = "aura_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aura_bot"]

[tool.uv]
package = true
